# MAI_Architecture_2023

./: docker-compose.yml  get_cache.lua  get_no_cache.lua  performance.md
arch/: components.md  context.md  task.md
auth_service/: CMakeLists.txt  Dockerfile
auth_service/src/: auth_factory.h  auth_handler.h  auth_server.h  main.cpp
auth_service/src/db/: cache.cpp  user.cpp  user.h
common/: config.cpp  config.h  database.cpp  helper.h
gc_service/: CMakeLists.txt  Dockerfile
gc_service/src/: gc_factory.h  gc_handler.h  gc_server.h  main.cpp
gc_service/src/db/: gcm.cpp  gcm.h  message.cpp  message.h
kafka_writer/: CMakeLists.txt  Dockerfile  writer_main.cpp
mariadb/data_generator/: Dockerfile  basemod.py  entrypoint.sh  group_chats.py  p2p_chats.py  user.py
openapi/: auth_service.yml  gc_service.yml  p2p_service.yml
p2p_service/: CMakeLists.txt  Dockerfile
p2p_service/src/: main.cpp  p2p_factory.h  p2p_handler.h  p2p_server.h
p2p_service/src/db/: message.cpp  message.h
proxysql/: proxysql.cnf
